Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Qianzheng/tongji.html
+++ b/Myerp/Tpl/Qianzheng/tongji.html
@@ -18,12 +18,12 @@
           <php>if($markpos == ''){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/tongji">部门统计</a> </li>
+          href="<{:SITE_INDEX}><{$ActionName}>/tongji">部门统计</a> </li>
         <li> <a 
           <php>if($markpos == '员工'){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}>Chanpin/tongji/listtype/员工">员工统计</a> </li>
+          href="<{:SITE_INDEX}><{$ActionName}>/tongji/listtype/员工">员工统计</a> </li>
       </ul>
     </div>
             <php>if(!$systemID){</php>
@@ -32,8 +32,7 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 开始时间 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 截止时间 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 团数 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 计划人数 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 签证数 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 订单人数/确认/占位/候补 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 报账人数 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 计划应收 </div></th>
@@ -44,7 +43,6 @@
                   <td scope="row" align="left" valign="top"><{$start_time}></td>
                   <td scope="row" align="left" valign="top"><{$end_time}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['tuanshu'])</php></td>
-                  <td scope="row" align="left" valign="top"><php> echo number_format($tongji['jihua_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['dingdan_renshu'])</php>/<php> echo number_format($tongji['queren_renshu'])</php>/<php> echo number_format($tongji['zhanwei_renshu'])</php>/<php> echo number_format($tongji['houbu_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['baozhang_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($tongji['yingshou'])</php></td>
@@ -55,7 +53,7 @@
             </table>
             <php>}</php>
     
-            <strong style="color:red">报账数据采用全部数据（未审核及已审核）,并只包含子团数据，不包含单项服务</strong>
+            <strong style="color:red">报账数据采用全部数据（未审核及已审核）,并只包含签证数据，不包含单项服务</strong>
 	<php>if(!$listtype){</php>
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
@@ -83,8 +81,7 @@
             <php>if($departmentID){</php>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 时间范围 </div></th>
 			<php> }</php>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团数 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 计划人数 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 签证数 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 订单人数/确认/占位/候补 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 报账人数 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 计划应收 </div></th>
@@ -100,7 +97,6 @@
                   <td scope="row" align="left" valign="top"><{$start_time}>至<{$end_time}></td>
 			<php> }</php>
                   <td scope="row" align="left" valign="top"><php> echo number_format(count($v['zituan']))</php></td>
-                  <td scope="row" align="left" valign="top"><php> echo number_format($v['jihua_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['dingdan_renshu'])</php>/<php> echo number_format($v['queren_renshu'])</php>/<php> echo number_format($v['zhanwei_renshu'])</php>/<php> echo number_format($tongji['houbu_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['baozhang_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['yingshou'])</php></td>
@@ -135,8 +131,6 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 标题 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 团号 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 出团日期 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 操作人 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 计划人数 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 订单人数/确认/占位/候补 </div></th>
@@ -149,9 +143,7 @@
                 <php> $i = -1; foreach($unitdata[0]['zituan'] as $v){ $i++;</php>
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Chanpin/zituanxinxi/chanpinID/<{$v['chanpinID']}>" target="_blank"><{$v['title_copy']}></a></td>
-                  <td scope="row" align="left" valign="top"><{$v['tuanhao']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['chutuanriqi']}></td>
+                  <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Qianzheng/fabu/chanpinID/<{$v['chanpinID']}>" target="_blank"><{$v['title_copy']}></a></td>
                   <td scope="row" align="left" valign="top"><{$v['user_name']}></td>
                   <td scope="row" align="left" valign="top"><{$v['renshu']}></td>
                   <td scope="row" align="left" valign="top"><{$v['dingdan_renshu']}>/<{$v['queren_renshu']}>/<{$v['zhanwei_renshu']}>/<{$v['houbu_renshu']}></td>
@@ -208,8 +200,7 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 姓名 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 团数 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 计划人数 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 签证数 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 订单人数/确认/占位/候补 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 报账人数 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 计划应收 </div></th>
@@ -222,7 +213,6 @@
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="left" valign="top"><{$v['title']}></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format(count($v['zituan']))</php></td>
-                  <td scope="row" align="left" valign="top"><php> echo number_format($v['jihua_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['dingdan_renshu'])</php>/<php> echo number_format($v['queren_renshu'])</php>/<php> echo number_format($v['zhanwei_renshu'])</php>/<php> echo number_format($tongji['houbu_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['baozhang_renshu'])</php></td>
                   <td scope="row" align="left" valign="top"><php> echo number_format($v['yingshou'])</php></td>
