Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/header_kongguan.html
+++ b/Myerp/Tpl/Chanpin/header_kongguan.html
@@ -2,12 +2,12 @@
     var SITE_INDEX = '<{:SITE_INDEX}>';
     var chanpinID = '<{$chanpinID}>';
 	
-	function tod_oprompt(msg){
-		var str = window.prompt(msg,"")  
-        if(str == 'ok')
-			return true;
-		return false;
-	}
+//	function tod_oprompt(msg){
+//		var str = window.prompt(msg,"")  
+//        if(str == 'ok')
+//			return true;
+//		return false;
+//	}
 	
     </script>
 
