--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -96,6 +96,16 @@ em,i{ font-style:normal;}
 	overflow:hidden;
 	float:right;
 }
+.noticeoper{
+	background-color:#4E8CCF;
+	width:608px;
+	padding:5px 10px;
+	color:white;
+	line-height:24px;
+	overflow:hidden;
+	float:right;
+}
+
 .timeNews em{ float:left;}
 .timeNews lable{float:left; width:40px;}
 .timeNews a{ float:left; width:450px; cursor:pointer;}
@@ -105,8 +115,10 @@ em,i{ font-style:normal;}
 <div class="noticebox" style="display:none">
   <div id="newsTitle" class="newsTitle"></div>
   <div id="timeNews" class="timeNews"></div>
+  <div id="noticeoper" class="noticeoper"><input type="button" value=" 清 空 " style="float:right" onclick="if(confirm('确定要清空！！')==true)del_alert(1,'全部');" /></div>
 </div>
 <script>
+
 jQuery(".noticebox").float({
 					   position:"rm",
 					   offset : {right : -633},
@@ -121,6 +133,11 @@ jQuery(".timeNews").hover(function(){
 },function(){
 	jQuery(".newsTitle").show();
 	jQuery(".noticebox").float("addOffset");
+})
+
+jQuery(".noticeoper").hover(function(){
+	jQuery(".newsTitle").hide();
+	jQuery(".noticebox").float("clearOffset","fast");
 })
 
 
