Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -112,8 +112,8 @@
                   <td valign="top" align="left" scope="row"><{$v['adultprice']}>元</td>
                   <td valign="top" align="left" scope="row"><{$v['type']}></td>
                   <td valign="top" align="left" scope="row"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
-                  <td valign="top" align="left" scope="row"><{$v['user_name']}></td>
-                  <td valign="top" align="left" scope="row"><{$v['bumen_copy']}></td>
+                  <td valign="top" align="left" scope="row"><{$v['xianlu']['xianlu']['user_name']}></td>
+                  <td valign="top" align="left" scope="row"><{$v['xianlu']['xianlu']['bumen_copy']}></td>
                 </tr>  
                 <tr height="40" class="evenListRowS1">
                     <td valign="top" align="left" scope="row" colspan="10">
