Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -119,7 +119,7 @@ return '指定销售没有添加，将不会门市销售！！！';
                 </tr>
                 <tr>
                   <td nowrap="nowrap"><strong>电商（儿童）价格:</strong>&nbsp;&nbsp;&nbsp;
-                    <input type="text" id="ertongshoujia" value="<{$chanpin['ertongshoujia']}>" >（电商销售儿童价）</td>
+                    <input type="text" id="ertongshoujia" value="<{$chanpin['ertongshoujia']}>" >（电商销售儿童价,填0则不销售儿童产品）</td>
                 </tr>
                 <tr>
                   <td nowrap="nowrap"><strong>儿童及其他说明（电商可不填）:</strong>&nbsp;&nbsp;&nbsp;
