--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -78,6 +78,7 @@
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
                     <input class="button" type="button" value=" 调价 " id="tiaojia_create">
                     <input class="button" type="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
+                    <input class="button" type="button" value=" 下架/上架 " onclick="onoffshop()">
                     <input class="button" type="button" value=" 删除 " onclick="if(window.confirm('确认删除？')==true)to_delete()">
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
@@ -96,6 +97,7 @@
           <th scope="col" nowrap="nowrap"><div> 确认/占位 </div></th>
           <th scope="col" nowrap="nowrap"><div> 剩余 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 状态 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 网店状态 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 收入款 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 支出款 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 盈亏 </div></th>
@@ -118,6 +120,7 @@
         <td scope="row" align="left" valign="top"><php> echo number_format($v['queren_num'])</php>/<php> echo number_format($v['zhanwei_num'])</php></td>
         <td scope="row" align="left" valign="top"><{$v['shengyu_num']}></td>
         <td scope="row" align="left" valign="top"><{$v['status']}></td>
+        <td scope="row" align="left" valign="top"><{$v['status_shop']}></td>
         <td scope="row" align="left" valign="top"><php>echo number_format($v[baozhang]['yingshou_copy']);</php></td>
         <td scope="row" align="left" valign="top"><php>echo number_format($v[baozhang]['yingfu_copy']);</php></td>
         <td scope="row" align="left" valign="top"><php>echo number_format($v[baozhang]['yingshou_copy']-$v[baozhang]['yingfu_copy']);</php></td>
@@ -314,6 +317,33 @@ function to_delete(){
 		}
 	});
 }
+
+function onoffshop(){
+	var checkboxitem = new Array();
+	var i = 0;
+	jQuery(".checkboxitem").each(function(index, element) {
+		if(jQuery(this).attr("checked")){
+			checkboxitem[i] = jQuery(this).attr('value');
+			i++;
+		}
+	});
+	if(checkboxitem == ''){
+		ajaxalert('至少选择1项进行操作！');
+		return;
+	}
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>Client/onoffshop/chanpintype/子团",
+		data:	"checkboxitem="+checkboxitem,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
+		}
+	});
+	
+	
+}
+
+
 
 </script> 
 
