Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -135,10 +135,10 @@ jQuery(".timeNews").hover(function(){
 	jQuery(".noticebox").float("addOffset");
 })
 
-jQuery(".noticeoper").hover(function(){
-	jQuery(".newsTitle").hide();
-	jQuery(".noticebox").float("clearOffset","fast");
-})
+//jQuery(".noticeoper").hover(function(){
+//	jQuery(".newsTitle").hide();
+//	jQuery(".noticebox").float("clearOffset","fast");
+//})
 
 
 jQuery(document).ready(function(){
