--- a/Myerp/Tpl/Message/gexingdingzhilist.html
+++ b/Myerp/Tpl/Message/gexingdingzhilist.html
@@ -61,7 +61,7 @@
                   <td scope="row" align="center" valign="top"><{$v['datatext']['chufachengshi']}></td>
                   <td scope="row" align="center" valign="top"><{$v['datatext']['xingchengyusuan']}></td>
                   <td scope="row" align="center" valign="top"><{$v['datatext']['chengren']}>/<{$v['datatext']['ertong']}>/<{$v['datatext']['yinger']}></td>
-                  <td scope="row" align="center" valign="top"><{$v['datatext']['qitaxuqiu']}></td>
+                  <td scope="row" align="center" valign="top" style="height:40px; overflow:hidden;"><{$v['datatext']['qitaxuqiu']}></td>
                   <td scope="row" align="center" valign="top"><php>echo date('Y/m/d H:i',$v['time'])</php></td>
                 </tr>
                 <php> }</php>
