Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Message/gexingdingzhilist.html
+++ b/Myerp/Tpl/Message/gexingdingzhilist.html
@@ -33,7 +33,7 @@
                 </tr>
                 
                 <tr height="20">
-                  <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
+                  <th scope="col" nowrap="nowrap" style="text-align:center; width:1%; "><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap" style="text-align:center; width:5%; "><div> 联系人 </div></th>
                   <th scope="col" nowrap="nowrap" style="text-align:center; width:5%; "><div> 电话 </div></th>
                   <th scope="col" nowrap="nowrap" style="text-align:center; width:5%; "><div> 旅游目的地 </div></th>
