--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -253,7 +253,7 @@ function quxiao_after(data,status){
           <td align="left" style="height: 32px"> 姓名： </td>
           <td align="left" style="height: 32px"> 类型： </td>
           <td align="left" style="height: 32px"> 性别： </td>
-          <td align="left" style="height: 32px"> 联系电话： </td>
+          <td align="left" style="height: 32px"> 手机： </td>
           <td align="left" style="height: 32px"> 证件类型： </td>
           <td align="left" style="height: 32px"> 证件号码： </td>
           <td align="left" style="height: 32px"> 应付： </td>
@@ -279,7 +279,7 @@ function quxiao_after(data,status){
           <option value="女">女</option>
           </select>
           </td>
-          <td align="left" style="height: 32px"><input name="telnum<{$i}>" type="text" value="<{$vo['telnum']}>" check="^\S+$" warning="所有人员电话号码不能为空,且不能含有空格"></td>
+          <td align="left" style="height: 32px"><input name="telnum<{$i}>" type="text" value="<{$vo['telnum']}>" check="^1[3458]\d{9}$" warning="所有人员电话号码不能为空,且必须为手机号"></td>
           <td align="left" style="height: 32px">
           <select name="zhengjiantype<{$i}>">
        <php>if($vo['zhengjiantype']){</php>
@@ -335,7 +335,7 @@ function quxiao_after(data,status){
           <td align="left" style="height: 32px"> 拼音： </td>
           <td align="left" style="height: 32px"> 类型： </td>
           <td align="left" style="height: 32px"> 性别： </td>
-          <td align="left" style="height: 32px"> 联系电话： </td>
+          <td align="left" style="height: 32px"> 手机： </td>
           <td align="left" style="height: 32px"> 证件类型： </td>
           <td align="left" style="height: 32px"> 证件号码： </td>
           <td align="left" style="height: 32px"> 生日： </td>
@@ -365,7 +365,7 @@ function quxiao_after(data,status){
           <option value="女">女</option>
           </select>
           </td>
-          <td align="left" style="height: 32px"><input name="telnum<{$i}>" type="text" value="<{$vo['telnum']}>" check="^\S+$" warning="所有人员电话号码不能为空,且不能含有空格"></td>
+          <td align="left" style="height: 32px"><input name="telnum<{$i}>" type="text" value="<{$vo['telnum']}>" check="^1[3458]\d{9}$" warning="所有人员电话号码不能为空,且必须为手机号"></td>
           <td align="left" style="height: 32px">
           <select name="zhengjiantype<{$i}>">
        <php>if($vo['zhengjiantype']){</php>
