--- a/Myerp/Tpl/B2CManage/kongguan.html
+++ b/Myerp/Tpl/B2CManage/kongguan.html
@@ -104,7 +104,7 @@
         </php>
       
       <tr height="40" class="evenListRowS1">
-        <td scope="row" align="left" valign="top" style=" background:#03F; float:left width:40"><input value="<{$v['chanpinID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkboxitem"></td>
+        <td scope="row" align="left" valign="top"><input value="<{$v['chanpinID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkboxitem"></td>
         <td scope="row" align="left" valign="top"><{$i+1}></td>
         <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Chanpin/zituanxinxi/chanpinID/<{$v['chanpinID']}>"><{$v['tuanhao']}></a></td>
         <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Chanpin/zituanxinxi/chanpinID/<{$v['chanpinID']}>"><{$v['title_copy']}></a></td>
