--- a/Myerp/Tpl/Index/search_yingshoutongji.html
+++ b/Myerp/Tpl/Index/search_yingshoutongji.html
@@ -30,7 +30,7 @@
                         <tr>
                         <php>if($listtype == '员工'){</php>
                           <td scope="row" nowrap="nowrap"> 员工 </td>
-                          <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
+                          <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>">(非模糊查找)</td>
                         <php>}else{</php>
                           <td scope="row" nowrap="nowrap"> 部门 </td>
                           <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
