Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -179,22 +179,22 @@ function shownavtab(s)
           <h3><span>组团部门</span></h3>
           <ul id="ul_shortcuts">
             <php>foreach($zutuanlist as $v){ if($v['title'] == '国内部-组团')continue;</php>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>/listtype/<{$listtype}>">&nbsp;<span><{$v['title']}></span></a> </li>
             <php>}</php>
             <php>foreach($zutuanlist as $v){ if($v['title'] != '国内部-组团')continue;</php>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>/listtype/<{$listtype}>">&nbsp;<span><{$v['title']}></span></a> </li>
             <php>}</php>
           </ul>
           <h3><span>地接部门</span></h3>
           <ul id="ul_shortcuts">
             <php>foreach($dijielist as $v){</php>
-            <li> <a href="<{:SITE_INDEX}>Dijie/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Dijie/tongji/departmentID/<{$v['systemID']}>/listtype/<{$listtype}>">&nbsp;<span><{$v['title']}></span></a> </li>
             <php>}</php>
           </ul>
           <h3><span>散客（联合体提供）</span></h3>
           <ul id="ul_shortcuts">
             <php>foreach($bumenlist as $v){</php>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span>|---<{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>/listtype/<{$listtype}>">&nbsp;<span>|---<{$v['title']}></span></a> </li>
             <php>}</php>
           </ul>
         </div>
