--- a/Myerp/Tpl/Chanpin/tongji.html
+++ b/Myerp/Tpl/Chanpin/tongji.html
@@ -55,7 +55,8 @@
             </table>
             <php>}</php>
     
-            <strong style="color:red">报账数据采用全部数据（未审核及已审核）,并只包含子团数据，不包含单项服务</strong>
+            <strong style="color:red">报账数据采用全部数据（未审核及已审核）,并只包含子团数据，不包含单项服务</strong><br />
+            <strong style="color:red">员工统计时，查询属于该部门的产品，提取发布人做为部门员工名单。</strong>
 	<php>if(!$listtype){</php>
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
