--- a/Myerp/Tpl/SetSystem/DDindex.html
+++ b/Myerp/Tpl/SetSystem/DDindex.html
@@ -37,6 +37,8 @@
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/help.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary/type/FAQ">FAQ</a></td>
           <td width="30%">FAQ</td>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/list.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary/type/操作费">操作费</a></td>
+          <td width="30%">操作费</td>
         </tr>
       </tbody>
     </table>
